# morphoneme

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  gemini.md  pyproject.toml  requirements.txt  词频分析阈值.txt
data/: citylex-2026-06-15_morphology_segmention.tsv
morph_query/: __init__.py  __main__.py  inf_suffixes.txt  mq.py
morphoneme/: __init__.py  __main__.py  mp.py  mq.py
scripts/: build_morph_query_db.py  build_morphoneme_db.py  fetch_frequencies.py  fetch_pronunciations.py  frequency_stats.py
tests/: test_morphoneme.py  test_mp.py  test_mq.py
thoughts/ledgers/: CONTINUITY_ses_1355.md
