[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "morphoneme"
version = "0.1.1"
description = "Search English words by morphological and phonological columns"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["morphology", "morpheme", "phoneme", "phonology", "linguistics", "english", "word-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/connoryang331/morphoneme"
Source = "https://github.com/connoryang331/morphoneme"
BugTracker = "https://github.com/connoryang331/morphoneme/issues"

[tool.setuptools.packages.find]
include = ["morphoneme*"]

[tool.setuptools.package-data]
morphoneme = ["*.txt"]

[project.scripts]
mp = "morphoneme.__main__:main"
morphoneme = "morphoneme.__main__:main"
